// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list section with custom title style 1`] = `
<View
  style={
    Array [
      Object {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "animation": Object {
        "scale": 1,
      },
      "colors": Object {
        "background": "rgba(255, 251, 254, 1)",
        "elevation": Object {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "isV3": true,
      "roundness": 4,
      "typescale": Object {
        "bodyLarge": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "displayLarge": Object {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": Object {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": Object {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": Object {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": Object {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": Object {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": Object {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "version": 3,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        Object {
          "textAlign": "left",
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 13,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          Object {
            "color": "#f44336",
          },
        ],
      ]
    }
  >
    Some title
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list section with subheader 1`] = `
<View
  style={
    Array [
      Object {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "animation": Object {
        "scale": 1,
      },
      "colors": Object {
        "background": "rgba(255, 251, 254, 1)",
        "elevation": Object {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "isV3": true,
      "roundness": 4,
      "typescale": Object {
        "bodyLarge": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "displayLarge": Object {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": Object {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": Object {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": Object {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": Object {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": Object {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": Object {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "version": 3,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        Object {
          "textAlign": "left",
        },
        Object {
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 13,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          undefined,
        ],
      ]
    }
  >
    Some title
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list section without subheader 1`] = `
<View
  style={
    Array [
      Object {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "animation": Object {
        "scale": 1,
      },
      "colors": Object {
        "background": "rgba(255, 251, 254, 1)",
        "elevation": Object {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "isV3": true,
      "roundness": 4,
      "typescale": Object {
        "bodyLarge": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "displayLarge": Object {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": Object {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": Object {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": Object {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": Object {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": Object {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": Object {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": Object {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": Object {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "version": 3,
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        false,
        Array [
          Object {
            "padding": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "margin": 8,
              "width": 40,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 16,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginVertical": 6,
              "paddingLeft": 8,
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;
